# zephyr_samples

./: LICENSE  README.md  README_ACH.md  SW-Content-Register.txt
barcode_scanner/: CMakeLists.txt  Kconfig  prj.conf
barcode_scanner/boards/: mimx93_evk_a55.conf  mimx93_evk_a55.overlay
barcode_scanner/src/: main.cpp  zx_scan.cpp  zx_scan.h
barcode_scanner/src/custom/: custom.c  custom.h  lv_conf_ext.h
barcode_scanner/src/zxing-cpp/core/src/: ZXTestSupport.h
ebike_data_source/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
ebike_data_source/boards/: mimx93_evk_a55.conf  mimx93_evk_a55.overlay  mimx93_qsb_a55.conf  mimx93_qsb_a55.overlay
ebike_data_source/src/: comm.c  comm.h  main.c  model.h
ebike_digital_cluster/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
ebike_digital_cluster/src/: control.c  control.h  main.c  model.c  model.h  view_shell.c
ebike_digital_cluster/src/custom/: custom.c  custom.h  lv_conf_ext.h
